# connectedhomeip

./: .gitmodules  README.md
.devcontainer/: Dockerfile  build.sh  devcontainer.json
.github/: .wordlist.txt
.github/workflows/: docker_img.yaml  examples-corstone.yaml  examples-openiotsdk.yaml  examples-psa-openiotsdk.yaml  tests.yaml  upstream-update.yaml
config/common/cmake/: chip_gn.cmake  chip_gn_args.cmake  make_gn_args.py  util.cmake
config/corstone/: CMakeLists.txt
config/corstone/chip-gn/: .gn  BUILD.gn  args.gni
config/corstone/chip-gn/toolchain/: BUILD.gn
config/corstone/cmake/: chip.cmake  linker.cmake  platform.cmake  profile.cmake  tf-m.patch  toolchain.cmake
config/corstone/cmake/profiles/: release.cmake
config/corstone/lwip/: user_lwipopts.h
config/mbed/: CMakeLists.txt
config/nrfconnect/chip-module/: CMakeLists.txt
config/openiotsdk/: CMakeLists.txt  make_gn_args.py  util.cmake
config/openiotsdk/chip-gn/: args.gni
config/openiotsdk/cmake/: chip.cmake  linker.cmake  profile.cmake  sdk.cmake  sdk.patch
config/openiotsdk/cmake/profiles/: debug.cmake  release.cmake
config/openiotsdk/fvp/: cs300.conf
config/openiotsdk/lwip/: user_lwipopts.h
config/openiotsdk/mbedtls/: BUILD.gn  mbedlts-platform.cmake  mbedtls_config.h  mbedtls_config_psa.h  mbedtls_config_tfm.h  mbedtls_threading_cmsis_rtos.c  mbedtls_threading_cmsis_rtos.h  platform_alt.c
config/openiotsdk/storage/: FlashBlockDevice.cpp
config/openiotsdk/tf-m/targets/an552/: boot_hal_bl2.c  target_cfg.c
config/openiotsdk/tf-m/targets/an552/cmsis_drivers/: Driver_Flash.c
config/openiotsdk/tf-m/targets/an552/cmsis_drivers/config/: RTE_Device.h
config/openiotsdk/tf-m/targets/an552/partition/: region_defs.h
config/telink/chip-module/: CMakeLists.txt
config/zephyr/chip-module/: CMakeLists.txt
docs/examples/: openiotsdk_examples.md  openiotsdk_examples_software_update.md
docs/guides/: README.md  corstone_commissioning.md  corstone_examples.md  corstone_examples_software_update.md  corstone_integration_tests.md  corstone_platform_overview.md  corstone_unit_tests.md  openiotsdk_commissioning.md  openiotsdk_examples.md  openiotsdk_integration_tests.md  openiotsdk_platform_overview.md
examples/all-clusters-app/corstone/: CMakeLists.txt  README.md
examples/all-clusters-app/corstone/main/: main_ns.cpp
examples/all-clusters-app/openiotsdk/: CMakeLists.txt  README.md
examples/all-clusters-app/openiotsdk/main/: main_ns.cpp
examples/lock-app/corstone/: CMakeLists.txt  README.md
examples/lock-app/corstone/main/: main_ns.cpp
examples/lock-app/linux/: BUILD.gn
examples/lock-app/lock-common/src/: LockEndpoint.cpp
examples/lock-app/openiotsdk/: CMakeLists.txt  README.md
examples/lock-app/openiotsdk/main/: main_ns.cpp
examples/ota-requestor-app/corstone/: CMakeLists.txt  README.md
examples/ota-requestor-app/corstone/main/: main_ns.cpp
examples/ota-requestor-app/openiotsdk/: CMakeLists.txt  README.md
examples/platform/corstone/app/: CMakeLists.txt  corstone_platform.cpp  corstone_platform.h  corstone_startup_gcc.cpp
examples/platform/corstone/app/dfu/: corstone_dfu_manager.cpp  corstone_dfu_manager.h
examples/platform/openiotsdk/: supported_examples.txt
examples/shell/corstone/: CMakeLists.txt  README.md
examples/shell/openiotsdk/: CMakeLists.txt  README.md
examples/tv-app/corstone/: CMakeLists.txt  README.md
examples/tv-app/openiotsdk/: CMakeLists.txt  README.md
examples/tv-app/tv-common/: BUILD.gn  tv-app.cmake
scripts/: checkout_submodules.py  run_in_ns.sh
scripts/examples/: corstone_example.sh  openiotsdk_example.sh
scripts/setup/: constraints.txt  requirements.all.txt  requirements.corstone.txt  requirements.mbed.txt  requirements.txt
scripts/setup/corstone/: connect_if.sh  network_setup.sh  python_env_setup.sh
scripts/setup/openiotsdk/: connect_if.sh  network_setup.sh  python_env_setup.sh
scripts/tests/: MPS3.conf  run_test_suite.py
scripts/tests/chiptest/: __init__.py  accessories.py  linux.py  openiotsdk.py  runner.py  test_definition.py
src/: BUILD.gn
src/app/server/: Server.cpp  Server.h
src/app/tests/: BUILD.gn  TestReadInteraction.cpp
src/credentials/: BUILD.gn
src/credentials/tests/: BUILD.gn  TestFabricTable.cpp
src/crypto/: BUILD.gn  CHIPCryptoPAL.h  CHIPCryptoPALOpenSSL.cpp  CHIPCryptoPALPSA.cpp  CHIPCryptoPALmbedTLS.cpp  crypto.gni
src/crypto/tests/: BUILD.gn  CHIPCryptoPALTest.cpp
src/inet/: IPAddress-StringFuncts.cpp  IPAddress.cpp  IPAddress.h  InetInterface.cpp  TCPEndPointImplIoTSocket.cpp  TCPEndPointImplIoTSocket.h  UDPEndPointImplIoTSocket.cpp  UDPEndPointImplIoTSocket.h
src/inet/tests/: BUILD.gn  TestInetAddress.cpp  TestInetCommonPosix.cpp
src/lib/core/: core.gni
src/lib/shell/: BUILD.gn  streamer_corstone.cpp
src/platform/: BUILD.gn  device.gni
src/platform/corstone/: BUILD.gn  BlePlatformConfig.h  CHIPDevicePlatformEvent.h  CHIPPlatformConfig.h  ConfigurationManagerImpl.h  ConnectivityManagerImpl.h  CorstoneArchUtils.c  CorstonePort.h  DiagnosticDataProviderImpl.cpp  InetPlatformConfig.h  KVPsaPsStore.cpp  KVPsaPsStore.h  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  Logging.cpp  Logging.h  NetworkCommissioningDriver.h  NetworkCommissioningEthernetDriver.cpp  PlatformManagerImpl.cpp  SystemPlatformConfig.h  SystemTimeSupport.cpp
src/platform/openiotsdk/: BUILD.gn  KVBlockDeviceStore.cpp  KVPsaPsStore.cpp  Logging.cpp  Logging.h  OTAImageProcessorImpl.cpp  OpenIoTSDKConfig.cpp  OpenIoTSDKPort.h  PlatformManagerImpl.cpp  PlatformManagerImpl.h
src/protocols/secure_channel/: CASESession.cpp
src/system/: BUILD.gn  SystemLayer.h  SystemLayerImplIoTSocket.cpp  SystemLayerImplIoTSocket.h  SystemLayerImplOpenIoTSDK.cpp  SystemLayerImplOpenIoTSDK.h  system.gni
src/system/tests/: BUILD.gn  TestSystemTimer.cpp
src/test_driver/openiotsdk/unit-tests/: CMakeLists.txt  test_components.txt  test_report.json
src/test_driver/openiotsdk/unit-tests/lwip-config/: user_lwipopts.h
src/test_driver/openiotsdk/unit-tests/main/: main.cpp  main_ns.cpp
(+64 files in other folders)
