# Copyright (c) 2023 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("${chip_root}/src/crypto/crypto.gni")

config("ois_mbedtls_config") {
  include_dirs = [ "${chip_root}/config/openiotsdk/mbedtls"]

  defines = [
    "MBEDTLS_CONFIG_FILE=<mbedtls_config.h>",
  ]
}

if (!chip_external_mbedtls) {
  import("//build_overrides/mbedtls.gni")
  import("${mbedtls_root}/mbedtls.gni")

  mbedtls_target("mbedtls") {
    sources = [
      "${chip_root}/config/openiotsdk/mbedtls/platform_alt.c",
      "${chip_root}/config/openiotsdk/mbedtls/mbedtls_threading_cmsis_rtos.c"
    ]

    public_configs = [ ":ois_mbedtls_config" ]
  }
} else {
  # Providing own mbedtls, so nothing to do, just provide a target
  group("mbedtls") {
  }
}
